# LoRA-SLM-Text-To-SQL

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: evaluate_model.py  preprocess.py  train_model.py
